app/assets/stylesheets/panels_view.scss
.copy-form {
    padding: 15px;
    border-radius: 5px;
    font-size: 14px;
    background: #d2d2d2;
    box-shadow: -3px 4px 3px -2px rgba(0, 0, 0, 0.16);
    min-width: 230px;

    hr {
        border-top: 2px solid #bababa;
        margin: 0 0 20px 0;
    }
}

[class*='uk-dropdown-right'] {
    margin-left: 15px;
}

.cf-collection-icon svg rect {
    stroke-width: 2.5;
    stroke: $light_nt;
}

.cf-collection-green svg rect {
    stroke-width: 2.5;
    stroke: $dark_accent;
}

.spinner.g-spin {
    width: 40px;
    top: 50%;
    margin-top: -20px;
    left: 50%;
    margin-left: -20px;
}

.spinner.g-spin svg {
    fill: $dark_grey;
}

.cf-collection-icon + span, .cf-collection-green + span {
    position: relative;
    left: 5px;
}

.action {
    margin-bottom: 10px;
    font-size: 16px;
}


.uk-icon-link.cf-disabled {
    color: #afafaf;
    cursor: initial;
}

.cf-name {
    padding-left: 10px;
    float: right;
}

.c-m {
    cursor: pointer;
    color: $light_grey;
    font-size: 14px;

    input {
        display: none;
    }
}

.chosen {
    font-size: 16px;
    color: $dark_grey;
    box-shadow: 0px 4px 0 0px #49ab8a;
    padding-bottom: 13px;
}

.cf-add-button {
    background: none;
    font-size: 14px;
    color: #999;
    border: 2px solid #bababa;
    border-radius: 5px;
    margin-top: 0px;
    margin-bottom: 2px;
}

.cf-add-button:hover {
    color: #666;
    border: 2px solid #49ab8a;
}

.cf-add-button:focus {
    outline: none;
}

#game_platform:hover + span .cf-platform-icon svg {
    fill: $dark_grey;
}

#collection:hover + span .cf-collection-icon svg rect {
    stroke: $dark_grey;
}

.cf-collection-icon svg rect {
    transition: 0.15s ease-in-out;
}

.cf-platform-green svg {
    fill: #49ab8a;
}

.cf-platform-icon svg {
    fill: $light_grey;
    transition: 0.15s ease-in-out;
}

.cf-platform-icon + span, .cf-platform-green + span {
    position: relative;
    left: 5px;
}

.cf-physical, .cf-digital {
    -webkit-appearance: none;
    display: inline-block;
    vertical-align: middle;
    box-sizing: border-box;
    margin: 0;
}

.cf-physical + svg, .cf-digital + svg {
    cursor: pointer;
    transition: 0.15s ease-in-out;
    margin-right: 7px;
}

.cf-physical + svg path {
    transition: 0.15s ease-in-out;
    fill: $light_grey;
}

.cf-physical:hover + svg path {
    fill: $dark_grey;
}

.cf-digital + svg {
    fill: $light_grey;
}

.cf-digital:hover + svg {
    fill: $dark_grey;
}

.cf-physical:checked + svg path {
    fill: $dark_accent;
}

.cf-digital:checked + svg {
    fill: $dark_accent;
}

.g-panel {
    position: relative;
    background: #d2d2d2;
    border-radius: 5px;
    box-shadow: -3px 4px 3px -2px rgba(0, 0, 0, 0.16);
    padding: 10px 0px 10px 10px;
    z-index: 50;
    margin-bottom: 15px;
}

.g-menu {
    background: #d2d2d2;
    overflow: hidden;
    padding: 0px;
    width: 0px;
    height: 90px;
    position: relative;
    left: -5px;
    z-index: 1;
    border-radius: 0px 5px 5px 0px;
    box-shadow: -3px 4px 3px -2px rgba(0, 0, 0, 0.16);
    transition: all 0.3s ease-in-out;

    a {
        color: $light_grey;
    }
}

.g-menu::after {
    content: "";
    position: absolute;
    top: 0;
    height: 100%;
    width: 5px;
    border-right: 1px solid $light_grey;
}

.g-menu ul {
    list-style: none;
    position: relative;
    left: -40px;
    transition: all 0.3s ease-in-out;
    padding: 0px;
    margin: 0px;
    padding-left: 15px;

    li {
        padding-top: 3px;
    }
}

.g-menu.out ul {
    left: 0px;
    transition: all 0.3s ease-in-out;
}

.g-menu.out {
    width: 45px;
}

.g-hide {
    position: absolute;
    bottom: 8px;
    right: 12px;
}

.thumb-c {
    position: relative;
    width: 70px;
    height: 70px;
    background: #bdbdbd;
}

.game-thumb {
    border-radius: 3px;
}

.shadow {
    position: absolute;
    height: 100%;
    width: 100%;
    box-shadow: inset 0px 0px 3px 0px #000000a3;
    border-radius: 3px;
    top: 0;
    left: 0;
}

.g-info {
    padding-left: 10px;
    text-align: left;
}

.g-title {
    margin-bottom: 0px;
}

.g-year {
    font-style: italic;
    font-size: 14px;
    color: $dark_grey;
}

.g-by {
    margin-top: 0px;
}

.g-nav ul {
    padding-left: 30px;
}

.g-platforms {
    font-size: 14px;
    font-style: italic;
    text-align: right;
    padding-right: 15px;
    display: flex;
    align-items: center;

    p {
        margin: 0;
    }
}

.g-drop {
    display: none;
}

.g-click {
    width: 100%;
    height: 90px;
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 5px;
    cursor: pointer;
}

.g-extra {
    margin: 0px 10px 20px 10px;
    padding-top: 8px;
    border-top: 2px solid #00000026;
}

.full-scrn {
    display: none;
    position: absolute;
    bottom: 5px;
    right: 10px;
    transition: color 0.1s ease-in-out;

    svg {
        width: 35px;
    }
}

.full-scrn svg path {
    stroke: #ffffffa3;
    stroke-width: 4.8;
}

.full-scrn:hover svg path {
    stroke: white;
}

.g-summary {
    @extend .info-summary;

    margin: 0px;
    line-height: 27px;
}

.g-links {
    margin-top: 15px;
    text-align: right;
}

.g-summary::first-letter {
    font-size: 20px;
    line-height: 27px;
}

.uk-position-small {
    margin: 15px 0px;
}

.pd-slide {
    width: 270px;
    height: 151.88px;
    float: left;
    margin-right: 10px;
    margin-top: 6px;
}

.pd-slide-items {
    border-radius: 3px;
    li { background: #bdbdbd; }
}

.pd-arr {
    display: none;
    color: #ffffffa3;
    z-index: 200;
}

.pd-arr svg {
    height: 30px;
    width: auto;
}

.pd-arr:focus {
    color: #ffffffa3;
}

.pd-arr:hover {
    color: white !important;
}

.pd-slide:hover .pd-arr {
    display: block;
}

.pd-slide:hover .full-scrn {
    display: block;
    z-index: 220;
}

.g-google {
    @extend .google;

    background: #c7c7c7;
    color: #8e8e8e;
}

.g-google:hover {
    background: #b9b9b9;
    color: #5f5f5f;
}

.g-google + a {
    margin-right: 0px !important;
}

.g-metacritic {
    background: #8e8e8e;
    border: 3px solid #bdbdbd;

    svg {
        max-width: 92%;
        fill: #c7c7c7;
    }
}

.g-metacritic:hover {
    background: #5f5f5f;
    border: 3px solid #a5a5a5;

    svg {
        max-width: 92%;
        fill: #d2d2d2;
    }
}

.pd-slide-items {
    height: 100%;
}

ul.pd-slide-items li img {
    height: unset !important;
}

